<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Add padding to this LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Register"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_name"
            android:text="Name"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/edit_email" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_email"
            android:text="Email"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your email address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/edit_password" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_password"
            android:text="Password"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/button_register" />

        <TextView
            android:id="@+id/text_password_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_password"
            android:text="Password Confirmation"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Re-enter your password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/button_register" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Your DrawerLayout code here -->

        <!-- Add BottomNavigationView here -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_navigation_menu" />

    </RelativeLayout>
</LinearLayout>